--- a/bibliography.bib
+++ b/bibliography.bib
@@ -47,5 +47,5 @@
 
 @misc{MNISTweb,
 	url={http://yann.lecun.com/exdb/mnist/}
-	author={Yann LeCun, Corinna Cortes, Christopher J.C. Burges}
+	author={Yann LeCun, Corinna Cortes, Christopher J.C. Burges},
 }
