added first in-line citation and minor changes

--- a/main.tex
+++ b/main.tex
@@ -102,7 +102,6 @@ My re-implementation of the algorithm can be found at:
 \url{https://github.com/AlessandroDalMaso/Unsupervised\_hebbian\_learning}
 
 \todo[inline]{vanno aggiunte le referenze alle varie parte teoriche spiegate, non è possibile una tesi con 5 referenze in totale\ldots tutti i metodi di ML usati vanno citati, etc\ldots}
-\todo{figure 2.13 e 2.14 rifare le caption}
 \end{abstract}
 
 \tableofcontents
@@ -111,7 +110,7 @@ My re-implementation of the algorithm can be found at:
 
 \chapter{Introduction}
 \section{Classification}
-The problem of classification has been studied since the beginnings of the field of study of pattern recognition.
+The problem of classification has been studied since the beginnings of the field of study of pattern recognition \cite{hand1997statistical} .
 It consists in finding a certain algorithm that allows a machine to classify a set of data among a certain number of classes.
 Applications are, as one can imagine, widespread:
 from allowing computers to recognize handwriting, to the automation of transport systems, to the labelling of the huge amount of data produced in modern day scientific experiment.
@@ -1234,7 +1233,7 @@ Thank you to ER.GO. and the Occhialini foundation, which gave me the means to be
 
 For all these reasons and one thousand more, thank you all.
 
-\bibliography{bibliography}
+\bibliography{my_bib_file}
 
 \appendix
 
