--- a/main.tex
+++ b/main.tex
@@ -110,10 +110,10 @@ My re-implementation of the algorithm can be found at:
 
 \chapter{Introduction}
 \section{Classification}
-The problem of classification has been studied since the beginnings of the field of study of pattern recognition \cite{hand1997statistical} .
+The problem of classification has been studied since the beginnings of the field of study of pattern recognition.
 It consists in finding a certain algorithm that allows a machine to classify a set of data among a certain number of classes.
 Applications are, as one can imagine, widespread:
-from allowing computers to recognize handwriting, to the automation of transport systems, to the labelling of the huge amount of data produced in modern day scientific experiment.
+from allowing computers to recognize handwriting, to the automation of transport systems, to the labelling of the huge amount of data produced in modern day scientific experiment \cite{hand1997statistical}.
 In general, the last 20 years have seen a growing number of fields in which a large quantity of digital data is available, the so called "big data" field.
 Computational power has also seen a rapid increase in the same time span, creating the possibility of statistical analysis of these large datasets.
 For a long time, human capabilities in this field vastly surpassed those of automated systems;
