--- a/my_bib_file.bib
+++ b/my_bib_file.bib
@@ -60,3 +60,33 @@
   year={1997},
   publisher={Wiley Online Library}
 }
+
+@article{marx2013big,
+  title={The big challenges of big data},
+  author={Marx, Vivien},
+  journal={Nature},
+  volume={498},
+  number={7453},
+  pages={255--260},
+  year={2013},
+  publisher={Nature Publishing Group}
+}
+
+@inproceedings{magoulas1999machine,
+  title={Machine learning in medical applications},
+  author={Magoulas, George D and Prentza, Andriana},
+  booktitle={Advanced course on artificial intelligence},
+  pages={300--307},
+  year={1999},
+  organization={Springer}
+}
+
+@article{ghoddusi2019machine,
+  title={Machine learning in energy economics and finance: A review},
+  author={Ghoddusi, Hamed and Creamer, Germ{\'a}n G and Rafizadeh, Nima},
+  journal={Energy Economics},
+  volume={81},
+  pages={709--727},
+  year={2019},
+  publisher={Elsevier}
+}
