--- a/main.tex
+++ b/main.tex
@@ -117,13 +117,13 @@ from allowing computers to recognize handwriting, to the automation of transport
 In general, the last 20 years have seen a growing number of fields in which a large quantity of digital data is available, the so called "big data" field.
 Computational power has also seen a rapid increase in the same time span, creating the possibility of statistical analysis of these large datasets.
 For a long time, human capabilities in this field vastly surpassed those of automated systems;
-In tackling this problem, we open the possibility of many more applications that traditionally were not thought as  tasks for computers.
+In tackling this problem, we open the possibility of many more applications that traditionally were not thought as  tasks for computers \cite{marx2013big}.
 
 In some cases, no set of classes is given:
-instead the task consist in separating the data among an \textit{a priori} unknown number of classes whose members share similar features.
+instead the task consist in separating the data among an \textit{a priori} unknown number of classes whose members share similar features \cite{bishop2006pattern}.
 Again, applications are widespread:
 from marketing algorithms to medical data, to finance.
-The possibility here is not just to delegate to computers a task that would be costly and time consuming to humans, but to investigate new patterns that would be inherently incomprehensible to humans.
+The possibility here is not just to delegate to computers a task that would be costly and time consuming to humans, but to investigate new patterns that would be inherently incomprehensible to humans \cite{magoulas1999machine} \cite{ghoddusi2019machine}.
 
 \section{Machine learning}
 The field of machine learning studies algorithms that improve at a task through learning.
